--- a/css/style.css
+++ b/css/style.css
@@ -323,3 +323,28 @@ ul {
 .footer__mail {
     color: #fff;
 }
+
+.window {
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: none;
+}
+
+.window:target {
+    display: flex;
+}
+
+.window__form {
+    width: 400px;
+    height: 500px;
+    background: #fff;
+    border-radius: 10px;
+    padding: 20px;
+}
